PWA設定（やっぱりちょっと変？

--- a/pwa.html
+++ b/pwa.html
@@ -20,8 +20,8 @@
         <script>
             window.addEventListener('load', function() {
                 if ('serviceWorker' in navigator) {
-                    const path_to_service_worke = "/enchant_flip/pwabuilder-sw.js";
-                    const register_option = {};//{scope: "."};
+                    const path_to_service_worke = "pwabuilder-sw.js";
+                    const register_option = {scope: "/enchant_flip/"};
                     navigator.serviceWorker.register(path_to_service_worke, register_option)
                     .then(function(registration) {
                         console.log("serviceWorker registed.");
